[package]
name = "axolog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
mockall = "0.11.4"
regex = "1.9.5"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
strum_macros = "0.25.2"
